fix navbar flicker

--- a/admin-base/materialize/custom/_navbar.scss
+++ b/admin-base/materialize/custom/_navbar.scss
@@ -17,4 +17,9 @@ nav {
 	  	}
   	}
   }
+  &.nav-extended {
+    height: 112px;
+    position: relative;
+    z-index: 1;
+  }
 }
